--- a/project/backend/package.json
+++ b/project/backend/package.json
@@ -1,4 +1,14 @@
-@@ .. @@
+{
+  "name": "pm-internship-backend",
+  "version": "1.0.0",
+  "description": "AI-Based Smart Allocation Engine Backend",
+  "main": "src/server.js",
+  "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "test": "jest",
+    "build": "node build.js"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
@@ -28,3 +38,9 @@
     "compression": "^1.7.4",
     "morgan": "^1.10.0"
   },
+  "devDependencies": {
+    "nodemon": "^3.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
+  }
+}
